# pomotroid

./: .babelrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THEMES.md  Taskfile.yml  appveyor.yml  index.html  latest.json  package-lock.json  package-tauri.json  package.json  pomotroid.json  public.asc  svelte.config.js  vite.config.js
.chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  config.yml  release.yml
.electron-vue/: dev-runner.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
.github/: FUNDING.yml  dependabot.yml
css/: app.112b956b.css  app.1e0038a6.css  app.4f8c3ae4.css  app.504465d9.css  app.785e08dc.css  app.80640bc2.css  app.8afccaf5.css  app.8e6ced4d.css  app.8f4724df.css  app.9bc07047.css  app.a4a07196.css  app.c9caea5f.css  app.daa08860.css  app.dbfd25e0.css  chunk-vendors.d7fef0b5.css
docs/: STATISTICS_FEATURE.md  STATISTICS_QUICKSTART.md
js/: app.0ac07556.js  app.0ac07556.js.map  app.0bd9a219.js  app.0bd9a219.js.map  app.12977cde.js  app.12977cde.js.map  app.150be4d6.js  app.150be4d6.js.map  app.24952f82.js  app.24952f82.js.map  app.2aa8d69d.js  app.2aa8d69d.js.map  app.352d4067.js  app.352d4067.js.map  app.5732120f.js  app.5732120f.js.map  app.668a85f0.js  app.668a85f0.js.map  app.6dee9c62.js  app.6dee9c62.js.map  app.72b60d90.js  app.72b60d90.js.map  app.75decf31.js  app.75decf31.js.map  app.b5418544.js  app.b5418544.js.map  app.b7a4a2e0.js  app.b7a4a2e0.js.map  app.c0c3aafb.js  app.c0c3aafb.js.map  app.cdb5546e.js  app.cdb5546e.js.map  app.e5a4b936.js  app.e5a4b936.js.map  app.f1d95ae9.js  app.f1d95ae9.js.map  app.f8ce5710.js  app.f8ce5710.js.map  chunk-vendors.2fe756cf.js  chunk-vendors.2fe756cf.js.map  (+8 more)
messages/: de.json  en.json  es.json  fr.json  ja.json  pt.json  zh.json
openspec/: config.yaml
project.inlang/: settings.json
rewrite/: ANALYSIS.md  DESIGN.md  PROPOSAL.md  REQUIREMENTS.md  TASKS.md
scripts/: bump-version.sh  new-release-cycle.sh  seed-db.py
src/: app.css  app.html  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.installer.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bus.rs  commands.rs  lib.rs  main.rs  power.rs
src-tauri/src/achievements/: eval.rs  mod.rs  toast.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/settings/: defaults.rs  mod.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/themes/: mod.rs  watcher.rs
src-tauri/src/timer/: engine.rs  mod.rs  sequence.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/websocket/: mod.rs
(+377 files in other folders)
